--- a/package.json
+++ b/package.json
@@ -12,7 +12,12 @@
     "next": "^11.0.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "rehype-stringify": "^9.0.2",
     "remark": "^13.0.0",
-    "remark-html": "^13.0.1"
+    "remark-gfm": "^2.0.0",
+    "remark-html": "^13.0.1",
+    "remark-parse": "^10.0.0",
+    "remark-rehype": "^9.0.0",
+    "unified": "^10.1.0"
   }
 }
