Add eslint configurations

--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "lint": "next lint"
   },
   "dependencies": {
     "gray-matter": "^4.0.3",
@@ -19,5 +20,9 @@
     "remark-parse": "^10.0.0",
     "remark-rehype": "^9.0.0",
     "unified": "^10.1.0"
+  },
+  "devDependencies": {
+    "eslint": "7.32.0",
+    "eslint-config-next": "11.1.2"
   }
 }
